day 9 Kubernetes Cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: day9-image-service
spec:
  type: LoadBalancer
  selector:
    app: day9-image
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
